data/apps/argocd/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "harbor.xxx.local"
  rules:
    - matches:
        - path: { type: PathPrefix, value: /api/ }
        - path: { type: PathPrefix, value: /c/ }
        - path: { type: PathPrefix, value: /chartrepo/ }
        - path: { type: PathPrefix, value: /service/ }
        - path: { type: PathPrefix, value: /v1/ }
        - path: { type: PathPrefix, value: /v2/ }
      backendRefs:
        - name: harbor-core
          port: 80

    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: harbor-portal
          port: 80
